--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <form id="dataForm">
         <div class="form-group">
-            <label for="name">姓#名:</label>
+            <label for="name">姓的名:</label>
             <input type="text" id="name" name="name" required>
         </div>
         
